Fixed header on mobile

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -66,4 +66,10 @@
     margin: 25% auto;
 }
 
+@media (max-width: 375px) {
+    .MuiToolbar-root {
+        flex-wrap: wrap;
+    }
+}
+
 
